fix wiggle scroll on IOS

--- a/styles.css
+++ b/styles.css
@@ -128,7 +128,6 @@ header {
     bottom: 0px;
     right: 0px;
     padding: 10px;
-    min-height: 150px;
     gap: 5px;
     text-align: center;
 
